src/objects/Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Topic_Details__c</fullName>
        <label>Agenda Topic Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>SMI Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agenda</label>
    <nameField>
        <label>Agenda Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>